--- a/src/components/job-listing/job-listing.css
+++ b/src/components/job-listing/job-listing.css
@@ -1,4 +1,4 @@
-
+/* 
 .job-listing{
     @apply my-5;
     @apply max-w-sm;
@@ -14,4 +14,4 @@
     font-size: 14px;
     @apply text-secondary;
     font-weight: 500;
-}
+} */
