--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,6 +5,7 @@
   @layer components {
     .hms-footer{
         @apply flex justify-end items-center h-24 gap-5 pr-5 text-hms-secondary bg-hms-primary;
+        @apply text-xl font-thin;
     }
     .hms-footer span {
         @apply transform rotate-[210deg];
