--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,51 +9,103 @@
   --color-tertiary: #219EBC;
   --color-quaternary: #fb8500;
   --color-quinary: #8ecae6;
+  --text-4xl: 2.25rem;
+  --text-3xl: 1.875rem;
+  --text-2xl: 2.25rem;
+  --text-xl: 1.25rem;
+  /* --text-p: 1.25rem; */
 }
 
 @layer base{
   body{
     @apply text-hms-primary;
+    @apply text-xl;
+    @apply font-light;
   }
+
+  body h1{
+    @apply text-4xl;
+    @apply font-semibold;
+  }
+
+  body h2, body h3{
+    @apply font-bold;
+    @apply py-2;
+  }
+
+  body h3{
+    @apply font-semibold;
+  }
+
   main{
+    /* @apply max-2xl; */
     @apply relative z-10 flex flex-row justify-center;
+    @apply p-0 lg:px-5;
   }
   div {
     @apply mb-3;
   }
+  main > div > div:nth-child(2){
+    @apply m-5 lg:m-0;
+  }
+
+  input{
+    @apply border-2 border-hms-primary;
+    @apply px-4 py-2;
+    @apply text-lg;
+    @apply focus:outline-none focus:border-hms-primary;
+  }
+
+  p{
+    @apply text-hms-primary;
+    @apply font-light;
+  }
+
+  ul li{
+    @apply list-disc;
+    @apply list-inside;
+    @apply pl-5;
+  }
+
+  /* h1, h2, h3, h4, h5, h6{
+    @apply text-hms-primary;
+  } */
+
+  /* h1{
+    @apply text-4xl;
+  }
+
+  h2{
+    @apply text-2xl;
+  }
+  h3{
+    @apply text-3xl;
+  } */
 }
 
 @layer components{
   .bg-pattern{
-    @apply bg-[url('../../assets/bg-pattern.png')] bg-repeat absolute w-full top-0 left-0 h-[550px];
+    @apply bg-[url('../../assets/bg-pattern.png')] bg-repeat absolute w-full top-0 left-0 h-[650px] lg:h-[550px];
   }
+
+  .btn-secondary{
+    @apply bg-hms-secondary;
+    @apply text-hms-primary;
+    @apply px-6 py-3;
+    @apply text-xl font-semibold;
+    @apply hover:bg-hms-quaternary transition-colors duration-300;
+  }
+
+  .btn-primary{
+    @apply bg-hms-primary;
+    @apply text-hms-secondary;
+    @apply px-6 py-3;
+    @apply text-xl font-semibold;
+    @apply hover:bg-hms-quaternary hover:text-hms-primary transition-colors duration-300;
+  }
+
+  .more-options{
+    @apply flex flex-row items-center justify-end gap-4;
+  }
+ 
 }
-
-
-
-
-
-
-/* @layer components {
-  @apply bg-pattern(''../../assets/bg-pattern.png');
-} */
-
-/* .bg-pattern {
-  background: url('../../assets/bg-pattern.png') repeat;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 550px;
-} */
-
-/* main {
-  position: relative;
-  z-index: 10;
-  background-color: var(--background, #ffffff);
-  color: var(--foreground, #171717);
-  min-height: 100vh;
-  background-color: transparent;
-} */
-
-
