--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -4,8 +4,8 @@
 
   @layer components {
     .hms-footer{
-        @apply flex justify-end items-center h-24 gap-5 pr-5 text-hms-secondary bg-hms-primary;
-        @apply text-xl font-thin;
+        @apply flex justify-end items-center h-24 gap-2 lg:gap-5 pr-5 text-hms-secondary bg-hms-primary;
+        @apply lg:text-xl font-thin;
     }
     .hms-footer span {
         @apply transform rotate-[210deg];
